--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -22,17 +22,6 @@ a {
   user-select: none;
 }
 
-.submit-btn {
-  max-width: 250px;
-  margin: 0 auto;
-  text-transform: uppercase;
-}
-
-.button-text {
-  text-transform: uppercase;
-  font-size: 12px;
-  color: $secondary;
-}
 
 
 .app {
@@ -68,6 +57,34 @@ a {
   }
   .v-input--radio-group--column .v-input--radio-group__input > .v-label {
     margin-bottom: 8px;
+  }
+
+  .submit-btn {
+    max-width: 250px;
+    width: 100%;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 8px 0;
+    margin: 8px auto;
+  }
+
+  .theme--dark.v-card.auth-card {
+    width: 400px;
+    background-color: $primary;
+    padding: 16px;
+    margin: 40px auto;
+    border: none;
+  }
+
+  .theme--light.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined).submit-btn,
+  .theme--dark.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined).submit-btn {
+    background-color: $secondary;
+  }
+  
+  .button-text {
+    text-transform: uppercase;
+    font-size: 12px;
+    color: $secondary;
   }
 }
 
