--- a/client/src/assets/styles/_variables.scss
+++ b/client/src/assets/styles/_variables.scss
@@ -1,3 +1,4 @@
+// colours
 $primary: #3d3d3c;
 $bg: #50514f;
 $secondary: #ff9900;
@@ -9,6 +10,8 @@ $success: #8bc34a;
 $light-grey: #d9d9d8;
 
 // media
-
 $tablet: "(min-width: 768px)";
 $desktop: "(min-width: 1200px)";
+
+// sizes
+$app-max-width: 1400px;
