--- a/client/src/assets/styles/_variables.scss
+++ b/client/src/assets/styles/_variables.scss
@@ -8,6 +8,7 @@ $warning: #ffc107;
 $info: #03a9f4;
 $success: #8bc34a;
 $light-grey: #d9d9d8;
+$label: #6C6C6B;
 
 // media
 $tablet: "(min-width: 768px)";
@@ -15,3 +16,4 @@ $desktop: "(min-width: 1200px)";
 
 // sizes
 $app-max-width: 1400px;
+$border-radius: 4px;
