--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -92,9 +92,20 @@ a {
     align-items: center;
   }
 
+  .row_center {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
   .theme--light.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined).submit-btn,
   .theme--dark.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined).submit-btn {
     background-color: $secondary;
+  }
+
+  .v-input--selection-controls.v-input {
+    display: inline-flex;
   }
 
   .button-text {
