--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -24,8 +24,11 @@ a {
   font-size: 12px;
 }
 
-.columns-2 {
-      column-count: 2;
+.columns {
+  column-count: auto;
+ column-fill: auto;
+ width: 300px;
+ height: 200px;
 }
 
 .app {
