team select wip

--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -74,6 +74,10 @@ a {
     margin-bottom: 8px;
   }
 
+  .v-tabs-items {
+    background-color: $light-grey;
+  }
+
   .submit-btn {
     max-width: 250px;
     width: 100%;
@@ -120,6 +124,7 @@ a {
     color: $secondary;
   }
 }
+
 
 .header-title {
   user-select: none;
