synced color vars

--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -59,7 +59,7 @@ a {
     }
   }
   .v-dialog .v-sheet {
-    background-color: $light-grey;
+    background-color: $lightgrey;
   }
   .v-btn.secondary .v-btn__content {
     color: $primary;
@@ -75,11 +75,11 @@ a {
   }
 
   .v-tabs-items {
-    background-color: $light-grey;
+    background-color: $lightgrey;
   }
 
   .v-tabs > .v-tabs-bar {
-    background-color: $light-grey;
+    background-color: $lightgrey;
   }
 
   .submit-btn {
