--- a/client/src/assets/styles/_variables.scss
+++ b/client/src/assets/styles/_variables.scss
@@ -1,4 +1,5 @@
 // colours
+// When adding a new variable, also add it to Vuetify.js in order to use it in the template
 $primary: #3d3d3c;
 $bg: #50514f;
 $secondary: #ff9900;
@@ -7,8 +8,8 @@ $error: #f44336;
 $warning: #ffc107;
 $info: #03a9f4;
 $success: #8bc34a;
-$light-grey: #d9d9d8;
-$label: #6C6C6B;
+$lightgrey: #d9d9d8;
+$label: #6c6c6b;
 
 // media
 $tablet: "(min-width: 768px)";
